--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="menu">
           <div><a href="#aboutMe">About Me</a></div>
           <div><a href="#introduction">Introduction</a></div>
-          <div><a href="https://michalskrzynski.github.io/browse-projectsy">Projects</a>
+          <div><a href="https://michalskrzynski.github.io/browse-projects">Projects</a>
             <img class="bootstrapped" src="./bootstrap-logo.png" height="20px" title="Subpage designed with Bootstrap.">
           </div>
         </div>
