--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             </p>
             <p class="right"><span class="email-left">michal.skrzynski</span><span class="email-right">gm</span></p>
             <p class="right">github: <a href="https://github.com/michalskrzynski">michalskrzynski</a></p>
+            <div class="flex-h-aligned-right">
+              <div>Linked&nbsp;</div>
+              <div>
+                <a href="https://www.linkedin.com/in/michal-skrzynski-863338258/" target="_blank">
+                  <img src="./LI-In-Bug.png" height="26px" alt="" srcset="">
+                </a>
+              </div>
+            </div>
           </div>
         </div>
 
