--- a/index.html
+++ b/index.html
@@ -65,18 +65,24 @@
                 Video might be cool to watch (or not ;) ). Anyway if you prefer
                 to read instead of watch this here's the transcript...
               </p>
+              <div class="intro-transcript">
+                <p>Hi, and welcome to my personal portfolio page.</p>
+                <p>My name is Michal, and I’d like to present you some of my latest projects.</p>
+                <p>Among them you may find:</p>
+                <ul>
+                  <li>the ones I made for the Odin Project</li>
+                  <li>some assignments from MIT xPro course</li>
+                  <li>and some others of my own initiative.</li>
+                </ul>
+                <p>Feel free to play with them and see the repository code.</p>
+                <p>As for myself, I’m currently on a path on becoming a full stack developer. </p>
+                <p>Having some previous experience in backend development, I hope it won’t be too hard. Especially with a great course like MIT xPro.</p>
+                <p>Anyway, the portfolio shall illustrate you the my current set of frontend skills. Have fun.</p>
+              </div>
               <div class="introduction-transcipt"></div>
             </div>
             <div class="introduction-video">
-              <iframe
-                height="100%"
-                width="100%"
-                src="https://www.youtube.com/embed/pbsPQ0teF14"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+              <iframe width="440" height="248" src="https://www.youtube.com/embed/DM_jGowg2BA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
